some more stuffs

--- a/soupault.conf
+++ b/soupault.conf
@@ -2,16 +2,30 @@
 # To learn about configuring soupalt, visit https://baturin.org/projects/soupault
 [settings]
   strict = true
-  verbose = false
+  verbose = true
 
   build_dir = "build"
   site_dir = "site"
 
   default_template = "templates/main.html"
-  content_selector = "body"
+  content_selector = "#content"
 
   doctype = "<!DOCTYPE html>"
 
   clean_urls = true
 
-  page_extensions = ["htm", "html", "md", "rst"]
+  page_extensions = ["html"]
+
+# [index]
+#   index = true
+#   index_selector = "div#index"
+
+[widget.navbar]
+  widget = "include"
+  selector = "#navver"
+  file = "templates/nav-menu.html"
+
+## Breadcrumbs
+# [widgets.add-breadcrumbs]
+#   widget = "breadcrumbs"
+#   selector = "#breadcrumbs"
