Fix the navbar inclusion.

--- a/soupault.conf
+++ b/soupault.conf
@@ -20,7 +20,7 @@
 #   index = true
 #   index_selector = "div#index"
 
-[widget.navbar]
+[widgets.navbar]
   widget = "include"
   selector = "#navver"
   file = "templates/nav-menu.html"
