made some progress

--- a/soupault.conf
+++ b/soupault.conf
@@ -16,14 +16,40 @@
 
   page_extensions = ["html"]
 
-# [index]
-#   index = true
-#   index_selector = "div#index"
+##### Plugin Loading
+[plugins.section-link-highlight]
+   file = "plugins/section-link-highlight.lua"
+
+[plugins.wrap-element]
+   file = "plugins/wrap-element.lua"
+
+##### Widgets
+[widgets.page-title]
+  widget = "title"
+  select = "h1"
+  default = "Sam Thomas"
 
 [widgets.navbar]
   widget = "include"
-  selector = "#navver"
-  file = "templates/nav-menu.html"
+  selector = "#navigation"
+  file = "templates/navigation.html"
+
+[widgets.navbar-wrap]
+  after = "navbar"
+  widget = "wrap-element"
+
+  selector = "#navigation"
+  source_elem = "a"
+  wrap_elem = "div"
+  wrap_class = "navbar-item"
+
+[widgets.navbar-selection]
+  after = "navbar-wrap"
+  widget = "section-link-highlight"
+
+  active_link_class = "nav-active"
+  selector = "#navigation"
+  source_elem = "div"
 
 ## Breadcrumbs
 # [widgets.add-breadcrumbs]
