--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,6 @@ jobs:
         port: ${{ secrets.PORT }}
         script: |
           cd ~/personal-website
+          whoami
+          date > evidence
           make
