--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
     - name: executing remote ssh commands using password
       uses: appleboy/ssh-action@master
+      env:
+        SOUPAULT: "~/.opam/default/bin/soupault"
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
