--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,5 @@ jobs:
         script: |
           cd ~/personal-website
           git pull
-          make SOUPAULT=$SOUP_BIN
+          make clean
+          make build SOUPAULT=$SOUP_BIN
