don't use make for buildling :(

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,4 @@ jobs:
           cd ~/personal-website
           git pull
           make clean
-          make build -B SOUPAULT=$SOUP_BIN
+          $SOUP_BIN
