--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,5 @@ jobs:
           cd ~/personal-website
           git pull
           make clean
-          $SOUP_BIN
+          make build SOUPAULT=$SOUP_BIN
+          echo $(whoami) $(date)
