--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,7 @@ jobs:
           cd ~/personal-website
           git pull
           make clean
-          make build SOUPAULT=$SOUP_BIN
-          echo $(whoami) $(date)
+          make build SOUPAULT=$SOUP_BIN -B
+          whoami
+          date
+          make -v
