made some changes, idk if anything changed though

--- a/soupault.conf
+++ b/soupault.conf
@@ -14,7 +14,7 @@
 
   clean_urls = true
 
-  page_extensions = ["html", "md"]
+  page_file_extensions = ["html", "md"]
 
 ##### Plugin Loading
 [plugins.section-link-highlight]
