fixed some things

--- a/soupault.conf
+++ b/soupault.conf
@@ -3,6 +3,7 @@
 [settings]
   strict = true
   verbose = true
+  debug = true
 
   build_dir = "build"
   site_dir = "site"
@@ -29,6 +30,8 @@
 
 ##### Indexing
 [index]
+  # Whether to generate indices or not
+  # Default is false, set to true to enable
   index = true
 
   # Where to insert the index
@@ -43,6 +46,10 @@
   # Page date selector
   index_date_selector = "time"
 
+  # By default entries are sorted by date in ascending order (oldest to newest)
+  # If you are making a blog, you can set this to true to sort from newest to oldest
+  newest_entries_first = false
+
   # Date format for sorting
   # Default %F means YYYY-MM-DD
   # For other formats, see http://calendar.forge.ocamlcore.org/doc/Printer.html
@@ -53,10 +60,6 @@
 
   # Wrapper element for index entries
   index_item_template = "<div> </div>"
-
-  # External index generator
-  # There is no default
-  # index_processor =
 
 ##### Widgets
 [widgets.page-title]
@@ -69,18 +72,10 @@
   selector = "#navigation"
   file = "templates/navigation.html"
 
-[widgets.navbar-wrap]
-  after = "navbar"
-  widget = "wrap-element"
-
-  selector = "#navigation"
-  source_elem = "a"
-  wrap_elem = "div"
-  wrap_class = "navbar-item"
-
 [widgets.navbar-selection]
-  after = "navbar-wrap"
+  after = "navbar"
   widget = "section-link-highlight"
+  exclude_path_regex = "\\.md$"
 
   active_link_class = "nav-active"
   selector = "#navigation"
