used exlude regex to make navbar wrap work again

--- a/soupault.conf
+++ b/soupault.conf
@@ -72,8 +72,18 @@
   selector = "#navigation"
   file = "templates/navigation.html"
 
-[widgets.navbar-selection]
+[widgets.navbar-wrap]
   after = "navbar"
+  widget = "wrap-element"
+  exclude_path_regex = "\\.md$"
+
+  selector = "#navigation"
+  source_elem = "a"
+  wrap_elem = "div"
+  wrap_class = "navbar-item"
+
+[widgets.navbar-selection]
+  after = "navbar-wrap"
   widget = "section-link-highlight"
   exclude_path_regex = "\\.md$"
 
