--- a/soupault.conf
+++ b/soupault.conf
@@ -28,39 +28,6 @@
 [preprocessors]
   md = "markdown-settings/preprocess.sh"
 
-##### Indexing
-[index]
-  # Whether to generate indices or not
-  # Default is false, set to true to enable
-  index = true
-
-  # Where to insert the index
-  index_selector = "#blog-index"
-
-  # Page title selector
-  index_title_selector = "h1"
-
-  # Page excerpt selector
-  index_excerpt_selector = "p"
-
-  # Page date selector
-  index_date_selector = "time"
-
-  # By default entries are sorted by date in ascending order (oldest to newest)
-  # If you are making a blog, you can set this to true to sort from newest to oldest
-  newest_entries_first = false
-
-  # Date format for sorting
-  # Default %F means YYYY-MM-DD
-  # For other formats, see http://calendar.forge.ocamlcore.org/doc/Printer.html
-  index_date_format = "%F"
-
-  # Page author selector
-  index_author_selector = "#authors"
-
-  # Wrapper element for index entries
-  index_item_template = "<div> </div>"
-
 ##### Widgets
 [widgets.page-title]
   widget = "title"
@@ -75,7 +42,6 @@
 [widgets.navbar-wrap]
   after = "navbar"
   widget = "wrap-element"
-  exclude_path_regex = "\\.md$"
 
   selector = "#navigation"
   source_elem = "a"
@@ -85,13 +51,45 @@
 [widgets.navbar-selection]
   after = "navbar-wrap"
   widget = "section-link-highlight"
-  exclude_path_regex = "\\.md$"
 
   active_link_class = "nav-active"
   selector = "#navigation"
-  source_elem = "div"
+  source_elem = "div.navbar-item"
 
-## Breadcrumbs
-# [widgets.add-breadcrumbs]
-#   widget = "breadcrumbs"
-#   selector = "#breadcrumbs"
+##### Indexing
+[index]
+  index = true
+  index_selector = "#blog-index"
+  index_processor = "scripts/index.py"
+  index_title_selector = ".title"
+  index_author_selector = "#authors"
+  # Whether to generate indices or not
+  # Default is false, set to true to enable
+  # index = true
+
+  # # Where to insert the index
+  # index_selector = "div#blog-index"
+
+  # # Page title selector
+  # index_title_selector = ".title"
+
+  # # Page excerpt selector
+  # index_excerpt_selector = "p"
+
+  # # Page date selector
+  # index_date_selector = ".date"
+
+  # # By default entries are sorted by date in ascending order (oldest to newest)
+  # # If you are making a blog, you can set this to true to sort from newest to oldest
+  # newest_entries_first = false
+
+  # # Date format for sorting
+  # # Default %F means YYYY-MM-DD
+  # # For other formats, see http://calendar.forge.ocamlcore.org/doc/Printer.html
+  # index_date_format = "%F"
+
+  # # Page author selector
+  # index_author_selector = "#authors"
+
+  # # Wrapper element for index entries
+  # index_item_template = "<div>hi </div>"
