lots of changes

--- a/soupault.conf
+++ b/soupault.conf
@@ -3,7 +3,7 @@
 [settings]
   strict = true
   verbose = true
-  debug = true
+  debug = false
 
   build_dir = "build"
   site_dir = "site"
@@ -61,9 +61,17 @@
   index = true
   index_selector = "#blog-index"
   index_processor = "scripts/index.py"
-  index_title_selector = ".title"
-  index_author_selector = "#authors"
-  # Whether to generate indices or not
+  index_title_selector = "#title"
+
+  # date stuff
+  index_date_selector = "#date"
+  index_date_format = "%F"
+  newest_entries_first = true
+
+[index.custom_fields]
+  authors = { selector = ".author", select_all = true }
+
+# Whether to generate indices or not
   # Default is false, set to true to enable
   # index = true
 
