--- a/markdown-settings/markdown.template
+++ b/markdown-settings/markdown.template
@@ -36,7 +36,7 @@ $include-before$
 $endfor$
 $if(title)$
 <header id="title-block-header">
-<h1 class="title">$title$</h1>
+<h1 id="title" class="title">$title$</h1>
 $if(subtitle)$
 <p class="subtitle">$subtitle$</p>
 $endif$
@@ -46,7 +46,7 @@ $for(author)$
 $endfor$
 </div>
 $if(date)$
-<p class="date">$date$</p>
+<p id="date" class="date">$date$</p>
 $endif$
 </header>
 $endif$
