made styling more modular

--- a/soupault.conf
+++ b/soupault.conf
@@ -27,6 +27,7 @@
 ##### Preprocessors
 [preprocessors]
   md = "markdown-settings/preprocess.sh"
+  # scss = "node-sass --output-style compressed"
 
 ##### Widgets
 [widgets.page-title]
