--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: build
+      uses: docker://ubuntu
       run: git clone https://github.com/sgpthomas/personal-website.git; make -C personal-website
     - name: deploy
       uses: AEnterprise/rsync-deploy@v1.0
