--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,9 +5,11 @@ jobs:
     name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
+    - name: checkout
+      uses: actions/checkout@v2
+      run: |
+        make
     - name: build
-      uses: docker://ubuntu
-      run: git clone https://github.com/sgpthomas/personal-website.git; make -C personal-website
     - name: deploy
       uses: AEnterprise/rsync-deploy@v1.0
       env:
