--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,12 +5,11 @@ jobs:
     name: Build and Deploy
     runs-on: ubuntu-latest
     steps:
-    - name: checkout
-      uses: actions/checkout@v2
     - name: build
+      uses: './'
+    - name: test
       run: |
-        sudo apt install libc-bin
-        make
+        ls -al
     - name: deploy
       uses: AEnterprise/rsync-deploy@v1.0
       env:
