--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,21 +7,15 @@ jobs:
     steps:
     - name: Checkout 
       uses: actions/checkout@v2
-    - name: test1
-      run: |
-        ls -al
     - name: build
       uses: './'
-    - name: test
-      run: |
-        ls -al
     - name: deploy
       uses: AEnterprise/rsync-deploy@v1.0
       env:
         DEPLOY_KEY: ${{ secrets.SERVER_SSH_KEY }}
         ARGS: "-e -c -r"
         SERVER_PORT: ${{ secrets.PORT }}
-        FOLDER: "build"
+        FOLDER: "build/*"
         SERVER_IP: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
         SERVER_DESTINATION: ${{ secrets.SERVER_DESTINATION }}
