--- a/soupault.conf
+++ b/soupault.conf
@@ -1,73 +1,82 @@
+[index]
+index = true
+sort_by = "date"
+sort_descending = true
 
-# To learn about configuring soupalt, visit https://baturin.org/projects/soupault
-[settings]
-  strict = true
-  verbose = true
-  debug = false
+[index.fields.title]
+selector = "h1"
 
-  build_dir = "build"
-  site_dir = "site"
+[index.fields.excerpt]
+selector = "p"
 
-  default_template = "templates/main.html"
-  content_selector = "#content"
+[index.fields.date]
+selector = "#date"
 
-  doctype = "<!DOCTYPE html>"
+[index.fields.author]
+selector = "#author"
 
-  clean_urls = true
+[index.fields.authors]
+select_all = true
+selector = ".author"
 
-  page_file_extensions = ["html", "md"]
+[index.views.blog]
+index_selector = "#blog-index"
+index_item_template = """
+<div class="article">
+  <div class="title">
+    <a href="{{url}}">{{title}}</a>
+  </div>
+  <span class="authors">
+    by {{ authors|join(", ") }}
+  </span>
+  <span class="date">{{date}}</span>
+  <div>
+    <p>{{excerpt | truncate(200)}} <a href="{{url}}">&hellip</a></p>
+  </div>
+</div>"""
 
-##### Plugin Loading
 [plugins.section-link-highlight]
-   file = "plugins/section-link-highlight.lua"
+file = "plugins/section-link-highlight.lua"
 
 [plugins.wrap-element]
-   file = "plugins/wrap-element.lua"
+file = "plugins/wrap-element.lua"
 
-##### Preprocessors
 [preprocessors]
-  md = "markdown-settings/preprocess.sh"
-  # scss = "node-sass --output-style compressed"
+md = "markdown-settings/preprocess.sh"
 
-##### Widgets
-[widgets.page-title]
-  widget = "title"
-  selector = "h1"
-  default = "Sam Thomas"
+[settings]
+build_dir = "build"
+clean_urls = true
+debug = false
+default_content_selector = "#content"
+default_template_file = "templates/main.html"
+doctype = "<!DOCTYPE html>"
+page_file_extensions = ["html","md"]
+site_dir = "site"
+strict = true
+verbose = true
 
 [widgets.navbar]
-  widget = "include"
-  selector = "#navigation"
-  file = "templates/navigation.html"
-
-[widgets.navbar-wrap]
-  after = "navbar"
-  widget = "wrap-element"
-
-  selector = "#navigation"
-  source_elem = "a"
-  wrap_elem = "div"
-  wrap_class = "navbar-item"
+file = "templates/navigation.html"
+selector = "#navigation"
+widget = "include"
 
 [widgets.navbar-selection]
-  after = "navbar-wrap"
-  widget = "section-link-highlight"
+active_link_class = "nav-active"
+after = "navbar-wrap"
+selector = "#navigation"
+source_elem = "div.navbar-item"
+widget = "section-link-highlight"
 
-  active_link_class = "nav-active"
-  selector = "#navigation"
-  source_elem = "div.navbar-item"
+[widgets.navbar-wrap]
+after = "navbar"
+selector = "#navigation"
+source_elem = "a"
+widget = "wrap-element"
+wrap_class = "navbar-item"
+wrap_elem = "div"
 
-##### Indexing
-[index]
-  index = true
-  index_selector = "#blog-index"
-  index_processor = "scripts/index.py"
-  index_title_selector = "#title"
-
-  # date stuff
-  index_date_selector = "#date"
-  index_date_format = "%F"
-  newest_entries_first = true
-
-[index.custom_fields]
-  authors = { selector = ".author", select_all = true }
+[widgets.page-title]
+default = "Sam Thomas"
+selector = "h1"
+widget = "title"
